# ml-transformers-homework

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  TRANSFORMERS_HOMEWORK_PLAN.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/imdb/: README.md  metadata.json
src/transformers_week/: __init__.py  day01_tokenization.py  imdb_dataset.py
tests/: test_day01_tokenization.py  test_imdb_dataset.py
