[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "transformers-week-project"
version = "0.1.0"
description = "Weekly NLP project: Day 1 tokenization with Hugging Face Transformers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.11,<3",
  "transformers>=5.5,<6",
]

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.10,<8",
  "mypy>=1.18,<2",
  "pre-commit>=4.3,<5",
  "pytest>=8.4,<9",
  "pytest-cov>=7,<8",
  "ruff>=0.13,<0.14",
]

[project.scripts]
transformers-day1 = "transformers_week.day01_tokenization:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "SIM",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "--cov=transformers_week",
  "--cov-report=term-missing",
  "--cov-report=xml",
]

[tool.coverage.run]
source = ["src/transformers_week"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 95

[tool.mypy]
python_version = "3.10"
files = ["src", "tests"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
pretty = true

[[tool.mypy.overrides]]
module = ["transformers.*"]
ignore_missing_imports = true
